passage par children

--- a/src/App/Components/ui/Button/Button.module.css
+++ b/src/App/Components/ui/Button/Button.module.css
@@ -12,5 +12,10 @@
     margin-right:10px;
 }
 .Button:hover{
-    box-shadow: 10px 10px
+    box-shadow: 10px 10px;
+}
+
+.Button img{
+    max-width: 32px;
+    height: 32px;
 }
