exo click chgmt style

--- a/src/App/Components/ui/Button/Button.module.css
+++ b/src/App/Components/ui/Button/Button.module.css
@@ -16,7 +16,7 @@
 }
 .clicked{
     box-shadow:5px 5px 25px grey !important;
-    border:1px solid black !important
+    border:1px solid black !important;
 }
 .Button img{
     max-width: 32px;
