navbar et store

--- a/src/App/Components/ui/MemeThumbnail/MemeThumbnail.module.css
+++ b/src/App/Components/ui/MemeThumbnail/MemeThumbnail.module.css
@@ -1,1 +1,8 @@
-.MemeThumbnail {}
+.MemeThumbnail {
+    display:flex;
+    flex-wrap:wrap;
+}
+.MemeThumbnail>div{
+    width:30vw;
+    height:25vw;
+}
